# model

./: .gitmodules  CMakeLists.txt  README.md
include/model/: Adjacencies.cpp  Adjacencies.h  AnimIK.h  AnimType.h  Animation.h  AssimpExporter.h  AssimpHelper.h  BlendShapeLoader.h  BrushBuilder.h  BrushModel.h  BspFile.h  BspLoader.h  BspModel.h  Callback.h  EffectType.h  FbxLoader.h  GlobalClock.h  GltfLoader.h  HalfEdgeMesh.h  M3DLoader.h  MapBuilder.h  MapLoader.h  Material.h  MaxLoader.h  MaxLoader.inl  MdlLoader.h  Mesh.h  MeshBuider.h  MeshGeometry.h  MeshIK.h  Model.h  ModelExtend.h  ModelExtendType.h  ModelFactory.h  ModelInstance.h  ModelObj.h  ModelParametric.h  MorphTargetAnim.h  NormalMap.h  ObjLoader.h  (+13 more)
include/model/gltf/: Model.h
platform/msvc/: .gitignore
platform/msvc/projects/: model.vcxproj  model.vcxproj.filters  model_new.vcxproj  model_new.vcxproj.filters
source/: AnimIK.cpp  AssimpExporter.cpp  AssimpHelper.cpp  BlendShapeLoader.cpp  BrushBuilder.cpp  BrushModel.cpp  BspLoader.cpp  BspModel.cpp  Callback.cpp  FbxLoader.cpp  GlobalClock.cpp  GltfLoader.cpp  M3DLoader.cpp  MapBuilder.cpp  MapLoader.cpp  Material.cpp  MaxLoader.cpp  MdlLoader.cpp  Mesh.cpp  MeshBuider.cpp  MeshGeometry.cpp  MeshIK.cpp  Model.cpp  ModelFactory.cpp  ModelInstance.cpp  ModelObj.cpp  ModelParametric.cpp  MorphTargetAnim.cpp  ObjLoader.cpp  ParametricEquations.cpp  ParametricSurface.cpp  QuakeMapEntity.cpp  Scene.cpp  SkeletalAnim.cpp  SkinnedData.cpp  SurfaceFactory.cpp  SurfaceLoader.cpp  TextureLoader.cpp
